# CrewAI_RAG_Pipeline_KnowledgeGraph

./: README.md  test.py
pdf_processor_crew/: Modelfile  README.md  pyproject.toml
pdf_processor_crew/extracted_tables/: RAG_Document.txt  table_0.csv  table_1.csv  table_10.csv  table_11.csv  table_12.csv  table_13.csv  table_14.csv  table_15.csv  table_16.csv  table_17.csv  table_18.csv  table_19.csv  table_2.csv  table_20.csv  table_21.csv  table_22.csv  table_23.csv  table_24.csv  table_25.csv  table_26.csv  table_27.csv  table_28.csv  table_29.csv  table_3.csv  table_30.csv  table_31.csv  table_32.csv  table_33.csv  table_34.csv  table_35.csv  table_36.csv  table_37.csv  table_38.csv  table_39.csv  table_4.csv  table_40.csv  table_41.csv  table_42.csv  table_43.csv  (+13 more)
pdf_processor_crew/parsed_tables/: all_parsed_tables.json  retrieved_info.json  table_10_parsed.json  table_11_parsed.json  table_12_parsed.json  table_13_parsed.json  table_14_parsed.json  table_15_parsed.json  table_16_parsed.json  table_17_parsed.json  table_18_parsed.json  table_19_parsed.json  table_1_parsed.json  table_20_parsed.json  table_21_parsed.json  table_22_parsed.json  table_23_parsed.json  table_24_parsed.json  table_25_parsed.json  table_26_parsed.json  table_27_parsed.json  table_28_parsed.json  table_29_parsed.json  table_2_parsed.json  table_30_parsed.json  table_31_parsed.json  table_32_parsed.json  table_33_parsed.json  table_34_parsed.json  table_35_parsed.json  table_36_parsed.json  table_37_parsed.json  table_38_parsed.json  table_39_parsed.json  table_3_parsed.json  (+18 more)
(+14 files in other folders)
